<resources>
  <string name="app_name">Quiz app</string>
  <string name="score_0">Score 0</string>
  <string name="Question">Question</string>
  <string name="answer1">Answer1</string>
  <string name="answer2">Answer2</string>
  <string name="answer3">Answer3</string>
  <string name="answer4">Answer4</string>
  <string name="submit">Next</string>
  <string name="todo">TODO</string>
  <string name="back">Back</string>
  <string name="no">No</string>
  <string name="result">Result</string>
  <string name="title_activity_login">LoginActivity</string>
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="welcome">"Welcome !"</string>
  <string name="invalid_username">Not a valid username</string>
  <string name="invalid_password">Password must be >5 characters</string>
  <string name="open">Open Drawer</string>
  <string name="close">Close Drawer</string>


  <string name="home">Home</string>
  <string name="books">Books</string>
  <string name="exam">Exam Quiz</string>
  <string name="profile">Profile</string>
  <string name="settings">Settings</string>
  <string name="share">Share...</string>
  <string name="feedback">Feedback</string>
  <string name="light_themes">Light_Themes</string>
  <string name="dark_themes">Dark Themes</string>
  <string name="switch_themes">Switch Themes</string>
  <string name="refresh">Refresh</string>


  <string name="admob_app_id">ca-app-pub-5029847948457986~4391570640</string>
  <string name="bottom_banner_ads_id">ca-app-pub-5029847948457986/2160993123</string>


  <string name="my_name">Md saiful islam</string>
  <string name="my_self">Hey i am saiful</string>
  <string name="hint">Type your first name </string>
  <string name="first_name">First name</string>
  <string name="last_name">last name</string>
  <string name="fill_the_from">Fill the from</string>


  <string name="login_with_google">login with google</string>
  <string name="date_of_birth">Date of birth</string>
  <string name="gender">Gender</string>
  <string name="i_agree_snakex_all_rules">I agree Snakex all rules...</string>
  <string name="something_else">Something else</string>
  <string name="log_out">Log Out</string>


</resources>