<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_drawer_menu"
        android:title="@string/home"
       android:icon="@drawable/home_icon"
        />

      <item
          android:icon="@drawable/books_icon"
        android:id="@+id/book_drawer_menu"
        android:title="@string/books"/>

      <item
          android:icon="@drawable/quiz_logo"
        android:id="@+id/exam_quiz_drawer_menu"
        android:title="@string/exam"/>


      <item
          android:icon="@drawable/profile_icon"
        android:id="@+id/profile_drawer_menu"
        android:title="@string/profile"/>

    <item
        android:icon="@drawable/settings_icon"
        android:id="@+id/setting_drawer_menu"
        android:title="@string/settings"/>

  <item
        android:icon="@drawable/theme_icon"
        android:id="@+id/themes_drawer_menu"
        android:title="@string/switch_themes"/>

 <item
     android:icon="@drawable/share_icon"
        android:id="@+id/share_drawer_menu"
        android:title="@string/share"/>

 <item
     android:icon="@drawable/feedback_icon"
        android:id="@+id/feedback_drawer_menu"
        android:title="@string/feedback"/>

  <item
     android:icon="@drawable/logout_icon"
        android:id="@+id/log_out"
        android:title="@string/log_out"/>




</menu>