<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_bottom_menu"
        android:title="@string/home"
       android:icon="@drawable/home_icon"
        />

      <item
          android:icon="@drawable/books_icon"
        android:id="@+id/book_bottom_menu"
        android:title="@string/books"/>

      <item
          android:icon="@drawable/quiz_logo"
        android:id="@+id/exam_quiz_bottom_menu"
        android:title="@string/exam"/>


      <item
          android:icon="@drawable/profile_icon"
        android:id="@+id/profile_bottom_menu"
        android:title="@string/profile"/>

    <item
        android:icon="@drawable/settings_icon"
        android:id="@+id/setting_bottom_menu"
        android:title="@string/settings"/>








</menu>