<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".quiz_question">








    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <TextView
                android:id="@+id/see_preview_quiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                app:drawableStartCompat="@drawable/back_icon" />


                <TextView
                    android:id="@+id/question_number"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"

                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/no"
                    android:textSize="15sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <ImageView
                android:id="@+id/quiz_icon"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                android:layout_marginTop="20dp"
                android:src="@drawable/quiz_logo" />
            <TextView
                android:id="@+id/time_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
               android:text="Time ;"
                android:textColor="@color/green"
                android:textSize="20sp"
              />

            <TextView
                android:id="@+id/score_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/score_0"
                android:textColor="@color/teal_200"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quiz_question_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/Question"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"

                />

            <TextView
                android:id="@+id/result_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:drawableStart="@drawable/result_icon"
                android:textSize="20sp"

                />
            <RadioGroup
                android:id="@+id/answer_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/answer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/answer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2"

                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/answer3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer3"

                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/answer4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer4"
                    android:textSize="15sp" />


            </RadioGroup>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/subimt_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/button_background"
                android:drawableEnd="@drawable/next_button_icon"
                android:drawablePadding="20dp"
                android:fontFamily="@font/merriweather_bold_italic"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="30dp" />



       <com.google.android.gms.ads.AdView
           android:id="@+id/bottom_banner_ads"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/red"
           app:adSize="BANNER"
          app:adUnitId="@string/bottom_banner_ads_id"/>
        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>