<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@color/background_color_5"
    tools:context=".login_page"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:orientation="horizontal"

        >





        <ImageView
            android:id="@+id/snakex_logo"
            android:layout_width="120dp"
            android:layout_height="110dp"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/snakex" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="@drawable/next_button_icon"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias=".1"
            android:textColor="@color/teal_200"
           android:layout_marginRight="10dp"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>



     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_marginRight="@dimen/margin10"
         android:layout_marginLeft="5dp"
         >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/merriweather_bold_italic"
        android:padding="10dp"
        android:text="@string/fill_the_from"
        android:textAlignment="center"
         android:textSize="@dimen/text_Primary"
        android:textColor="@color/purple_500" />







      <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/first_name_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/merriweather_bold_italic"
         android:layout_gravity="center"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         >


        <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/name"
           android:layout_width="250dp"
           android:layout_height="wrap_content"

           android:drawableStart="@drawable/man_icon"
           android:textSize="@dimen/text_Primary"
           android:inputType="text"
           android:hint="@string/first_name" />

      </com.google.android.material.textfield.TextInputLayout>







       <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/birthday_layout"
          android:layout_width="wrap_content"
          android:layout_gravity="center"
          android:layout_height="wrap_content"
          android:fontFamily="@font/merriweather_bold_italic"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          >


         <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthday"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_Primary"
            android:inputType="datetime"
            android:hint="@string/date_of_birth" />
       </com.google.android.material.textfield.TextInputLayout>



     <RadioGroup
         android:id="@+id/gender_group"
         android:layout_width="match_parent"
         android:layout_height="40dp"
           android:orientation="horizontal"


         >

         <RadioButton
             android:id="@+id/male"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Male"
             android:fontFamily="@font/merriweather_bold_italic"
             android:layout_marginLeft="@dimen/margin10"
        
             />


         <RadioButton
             android:id="@+id/female"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Female"
             android:fontFamily="@font/merriweather_bold_italic"
             android:layout_marginLeft="@dimen/margin10"/>

         <RadioButton
             android:id="@+id/something_else"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/merriweather_bold_italic"
             android:text="@string/something_else"
             android:layout_marginLeft="@dimen/margin10"/>

     </RadioGroup>


    <AutoCompleteTextView
        android:id="@+id/country_code"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:fontFamily="@font/merriweather_bold_italic"
      android:autofillHints="country code"
        android:layout_gravity="right"
        android:textSize="@dimen/text_Primary"/>


       <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/phone_number_or_email_layout"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          app:counterEnabled="true"
          android:fontFamily="@font/merriweather_bold_italic"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          >


         <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number_or_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_Primary"
            android:drawableStart="@drawable/email_icon"
            android:inputType="text"
            android:hint="Email or Phone..." />
       </com.google.android.material.textfield.TextInputLayout>




<androidx.constraintlayout.widget.ConstraintLayout
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
  >

       <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/user_zip_code_layout"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:counterEnabled="true"
          app:counterMaxLength="4"
          android:fontFamily="@font/merriweather_bold_italic"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintRight_toRightOf="parent">


         <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_zip_code"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_Primary"
            android:maxLength="4"
            android:inputType="textPostalAddress"

            android:hint="Zip Code" />
       </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


       <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/password_layout"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          app:endIconMode="password_toggle"
          android:fontFamily="@font/merriweather_bold_italic"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          >


         <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_Primary"
            android:inputType="textPassword"
            android:hint="Passwords..." />
       </com.google.android.material.textfield.TextInputLayout>




       <CheckBox
        android:id="@+id/agree_check_buttun"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:fontFamily="@font/merriweather_bold_italic"
        android:paddingLeft="@dimen/padding10"
        android:text="@string/i_agree_snakex_all_rules"
          android:layout_gravity="center"
        android:textSize="15sp"/>




    <TextView
        android:id="@+id/login_with_google_text"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:fontFamily="@font/merriweather_bold_italic"
         android:textAppearance="@style/TextAppearance.AppCompat"
        android:text="@string/login_with_google"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:layout_marginTop="@dimen/margin10"/>

    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/google_login_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:src="@drawable/google_logo"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck"
        android:focusable="true" />


     <TextView
         android:id="@+id/show_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/red"

         />


     </LinearLayout>


 </LinearLayout>


    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>